# viralata

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  manage.py  pos-release.sh  pyproject.toml  pytest.ini
.github/workflows/: blank.yml  fly-deploy.yml
contrib/: env-sample
staticfiles/css/: style.css
viralata/: asgi.py  settings.py  urls.py  wsgi.py
viralata/base/: admin.py  models.py  urls.py  views.py
viralata/base/migrations/: 0001_initial.py  0002_alter_categoria_options_remove_foto_slug_and_more.py  0002_foto_delete_fotos.py  0002_rename_image_foto_imagem.py  0003_remove_categoria_slug.py  0003_rename_imagem_foto_image.py  0004_alter_categoria_options_alter_foto_options.py  0004_categoria_slug.py  0005_alter_categoria_options_alter_foto_options_and_more.py  0006_foto_categoria.py  0007_alter_foto_categoria.py  0008_alter_categoria_options_alter_foto_options_and_more.py
viralata/base/templates/: projeto.html
viralata/base/templates/base/: arte.html  cultura.html  editais.html  galeria.html  projeto.html
viralata/base/tests/: test_galeria.py  test_urls.py
viralata/cores/: admin.py  models.py  urls.py  views.py
viralata/cores/migrations/: 0001_initial.py
viralata/cores/static/: index.html
viralata/cores/templates/cores/: cores.html  footer.html  home.html
viralata/cores/tests/: test_home.py
