[tool.poetry]
name = "viralata"
version = "0.1.0"
description = ""
authors = ["Davidson <deivisonj1@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django-s3-folder-storage = "^0.5"
pytest = "^8.3.2"
python-decouple = "^3.8"
dj-database-url = "^2.2.0"
flake8 = "^7.1.0"
collectfast = "^2.2.0"
django = "^5.0.7"

